<resources>
    <string name="app_name">LikeEat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo_txt">logo</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_pass">Lupa password? Klik disini</string>
    <string name="reset">Reset Password</string>
    <string name="old_pass">Password Lama</string>
    <string name="new_pass">Password Baru</string>
    <string name="notify_user_pass">Masukkan username dan password terlebih dahulu</string>
    <string name="password_baru_sent">Password baru sudah dikirim ke email anda</string>
    <string name="gagal_reset">Reset password gagal</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="facebook_app_id">432869260475345</string>
    <string name="fb_login_protocol_scheme">fb432869260475345</string>
    <string name="berhasil_login">Selamat anda sudah berhasil login</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_button">Add New</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Alamat</string>

    <string name="google_maps_API_key">AIzaSyAPhd29pzeJ7kBQMlv8__vj9hQiGZPUU7k</string>
    <string name="date_picker">datePicker</string>

    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">New Comment</string>
</resources>
